[workspace]
resolver = "2" 

members = [
    "pc-cli",
    "pc-format",
    "pc-io",
]

default-members = ["pc-cli"]

[workspace.package]
edition = "2024"
version = "0.1.0"
readme = "README.md"
license = "Apache-2.0"

[workspace.dependencies]
ahash = "0.8.11"
anyhow = "1"
async-trait = "0.1.87"
clap = { version = "4.5", features = ["derive", "env"] }
dashmap = { version = "6.1", features = ["rayon"] }
datafusion = { version = "46.0.0", default-features = false }
futures = "0.3.31"
itertools = "0.14.0"
num-traits = "0.2.19"
rand = { version = "0.9.0", features = ["small_rng"] }
rayon = "1.10"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
rstar = { version = "0.12.2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.44", default-features = false }
uuid = { version = "1.15", features = ["v4", "fast-rng"] }

[profile.profiling]
inherits = "release"
debug = true
