[package]
name = "pc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
dashmap = { workspace = true }
datafusion = { workspace = true, features = ["parquet"] }
futures = { workspace = true }
glob = "0.3.2"
half = "2.5.0"
rand = { workspace = true }
rand_chacha = "0.9.0"
rayon = { workspace = true }
rstar = { workspace = true }
tokio = { workspace = true, features = ["full"] }

pc-format = { path = "../pc-format" }
pc-io = { path = "../pc-io" }

[dev-dependencies]
itertools = { workspace = true }
num-traits = { workspace = true }
