[package]
name = "pc-io"
version.workspace = true
edition.workspace = true
license.workspace = true


[dependencies]
async-trait = { workspace = true }
datafusion = { workspace = true, features = ["parquet"] }
futures = { workspace = true }
glob = "0.3.2"
half = "2.5"
las = { version = "0.9.3", features = ["laz"] }
laz = "0.9.2"
num-traits = { workspace = true }
ply-rs = "0.1.3"
rand = { workspace = true }
rayon = { workspace = true }
rstar = { workspace = true }

pc-format = { path = "../pc-format" }

[dev-dependencies]
nalgebra = "0.33.2"
tokio = { workspace = true, features = ["rt-multi-thread"] }
